@@ -340,3 +340,6 @@ ASALocalRun/
 healthchecksdb
 /Reference
 /ComicRack/myressources.res
+/cYo.Common/CurrentCommit.txt
+/cYo.Common/isDirty.txt
+/cYo.Common/Tags.txt
